k3s/infra/networking/argocd-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ar.glok.store`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls: {}
