k3s/infra/networking/devgress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-key-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: default-google-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - www.glok.store      
      secretName: glok-tls-secret
  rules:
    - host: www.glok.store
      http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
