k3s/infra/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gloc-key-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"  
spec:
  tls:
    - hosts:
        - www.glok.store      
      secretName: glok-tls-secret
  rules:
    - host: www.glok.store
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          # - path: /swagger-ui
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend-service
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
