k3s/infra/networking/lambda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lambda-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"  
spec:
  tls:
    - hosts:
        - www.glok.store      
      secretName: glok-tls-secret
  rules:
    - host: www.glok.store
      http:
        paths:
          - path: /internal
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
