k3s/infra/networking/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tr.glok.store`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
